--- a/simple-responsive-examples/collage.html
+++ b/simple-responsive-examples/collage.html
@@ -6,7 +6,7 @@
     <title>Picture Collage</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body>
+  <body class="container">
     <header>
       <h2>hello</h2>
     </header>
